--- a/bitcamp-java/build.gradle
+++ b/bitcamp-java/build.gradle
@@ -10,6 +10,9 @@ repositories {
 
 dependencies {
     implementation 'javax.annotation:javax.annotation-api:1.3.2' //@Resourse
+    implementation 'org.mybatis:mybatis-spring:2.0.4' // Mybastis를 Spring과 연동할 때 사용할 라이브러리
+    implementation 'commons-dbcp:commons-dbcp:1.4' // Apache commons-dbcp 라이브러리
+    implementation 'org.springframework:spring-jdbc:5.2.4.RELEASE' // Spring JDBC 라이브러리
     implementation 'org.springframework:spring-context:5.2.4.RELEASE'
     implementation 'org.mybatis:mybatis:3.5.4'
     implementation 'org.mariadb.jdbc:mariadb-java-client:2.5.4'
