--- a/bitcamp-java/build.gradle
+++ b/bitcamp-java/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     implementation 'com.google.guava:guava:28.0-jre'
     implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.11'
     testImplementation 'junit:junit:4.12'
+    implementation group: 'org.aspectj', name: 'aspectjweaver', version: '1.9.5'
 }
 
 application {
