--- a/bitcamp-project-server/build.gradle
+++ b/bitcamp-project-server/build.gradle
@@ -22,4 +22,6 @@ dependencies {
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6' // Json
     implementation 'com.google.guava:guava:28.0-jre'
     testImplementation 'junit:junit:4.12'
+    implementation group: 'org.aspectj', name: 'aspectjweaver', version: '1.9.5'
+    implementation 'log4j:log4j:1.2.17'
 }
