--- a/bitcamp-project-server/src/main/resources/log4j.properties
+++ b/bitcamp-project-server/src/main/resources/log4j.properties
@@ -1,12 +1,16 @@
 # log4j.properties
 
 # Set root logger level to DEBUG and its only appender to stdout.
-log4j.rootLogger=DEBUG, stdout
+# Default Level = INFO
+log4j.rootLogger=INFO, stdout
+# dao Level = DEBUG
+log4j.logger.com.eomcs.lms.dao=DEBUG
+log4j.logger.org.mybatis.spring=DEBUG
 
 # stdout is set to be a ConsoleAppender.
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 
 # stdout uses PatternLayout.
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%5p [%t] - %m%n
+log4j.appender.stdout.layout.ConversionPattern=%5p [%t : %d{yyyy-mm-dd HH:mm:ss}] - (%c) %m%n
 
