--- a/bitcamp-project-server/backUp/v53_1/build.gradle
+++ b/bitcamp-project-server/backUp/v53_1/build.gradle
@@ -23,6 +23,5 @@ dependencies {
     implementation 'com.google.guava:guava:28.0-jre'
     testImplementation 'junit:junit:4.12'
     implementation group: 'org.aspectj', name: 'aspectjweaver', version: '1.9.5'
-    // implementation 'log4j:log4j:1.2.17' // log4j
-    implementation 'org.apache.logging.log4j:log4j:2.13.1' // log4j2
+    implementation 'log4j:log4j:1.2.17' // log4j
 }
