--- a/bicamp-java-web/build.gradle
+++ b/bicamp-java-web/build.gradle
@@ -25,5 +25,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     compileOnly 'javax.servlet:javax.servlet-api:4.0.1' // Servlet-API : 컴파일 할 때만 사용, 배치할 때는 서버에 이미 존재
     implementation 'commons-fileupload:commons-fileupload:1.4'
+    implementation 'net.coobird:thumbnailator:0.4.11' //thumnailator
 
 }
