--- a/bicamp-java-web/src/main/webapp/WEB-INF/web.xml
+++ b/bicamp-java-web/src/main/webapp/WEB-INF/web.xml
@@ -7,6 +7,23 @@
   version="4.0"
   metadata-complete="false">
   
+  <context-param>
+    <param-name>jdbc2.driver</param-name>
+    <param-value>org.mariadb.jdbc.Driver</param-value>
+  </context-param>
+  <context-param>
+    <param-name>jdbc2.url</param-name>
+    <param-value>jdbc:mariadb://localhost/studydb</param-value>
+  </context-param>
+  <context-param>
+    <param-name>jdbc2.username</param-name>
+    <param-value>study</param-value>
+  </context-param>   
+  <context-param>
+    <param-name>jdbc2.password</param-name>
+    <param-value>1111</param-value>
+  </context-param>
+  
 <!-- 리스너 등록 -->
   <listener>
     <listener-class>com.eomcs.web.ex02.Listener01</listener-class>
@@ -74,6 +91,45 @@
     <servlet-name>ex04.Servlet05</servlet-name>
     <url-pattern>/ex04/s5</url-pattern>
   </servlet-mapping>
- -->
+   -->
+  <servlet>
+  <servlet-name>ex06.Servlet02</servlet-name>
+    <servlet-class>com.eomcs.web.ex06.Servlet02</servlet-class>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+   <servlet-mapping>
+    <servlet-name>ex06.Servlet02</servlet-name>
+    <url-pattern>/ex06/s2</url-pattern>
+  </servlet-mapping>
+  
+   <servlet>
+   <servlet-name>ex06.Servlet04</servlet-name>
+    <servlet-class>com.eomcs.web.ex06.Servlet04</servlet-class>
+    <init-param>
+      <param-name>jdbc.driver</param-name>
+      <param-value>org.mariadb.jdbc.Driver</param-value>
+    </init-param>
+    <init-param>
+      <param-name>jdbc.url</param-name>
+      <param-value>jdbc:mariadb://localhost/studydb</param-value>
+    </init-param>
+    <init-param>
+      <param-name>jdbc.username</param-name>
+      <param-value>study</param-value>
+    </init-param>
+    <init-param>
+      <param-name>jdbc.password</param-name>
+      <param-value>1111</param-value>
+    </init-param>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+   <servlet-mapping>
+    <servlet-name>ex06.Servlet04</servlet-name>
+    <url-pattern>/ex06/s4</url-pattern>
+  </servlet-mapping>
+  
+ 
+
+
  
 </web-app>
