--- a/bitcamp-project-server/build.gradle
+++ b/bitcamp-project-server/build.gradle
@@ -18,8 +18,10 @@ dependencies {
     implementation 'org.reflections:reflections:0.9.12' // Reflection API 사용 보조
     implementation 'org.springframework:spring-jdbc:5.2.4.RELEASE' // Spring - JDBC
     implementation 'org.mybatis:mybatis-spring:2.0.4' // Spring - MyBatis
-    implementation 'org.springframework:spring-context:5.2.4.RELEASE' // Spring IoC Container
     implementation 'org.mybatis:mybatis:3.5.4' // MyBatis
+    implementation 'org.springframework:spring-webmvc:5.2.5.RELEASE'//Spring WebMVC 라이브러리
+    //implementation 'org.springframework:spring-context:5.2.5.RELEASE' // Spring IoC Container
+    // Spring WebMVC 라이브러리 spring-context 라이브러리 사용하기 때문에 자동으로 추가됨.
     implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.5.4' // MariaDB
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6' // Json
     implementation 'com.google.guava:guava:28.0-jre'
